// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figma backend: empty page generates a document with a single empty CANVAS page 1`] = `
Object {
  "componentSets": Object {},
  "components": Object {},
  "document": Object {
    "children": Array [
      Object {
        "backgroundColor": Object {
          "a": 1,
          "b": 1,
          "g": 1,
          "r": 1,
        },
        "children": Array [],
        "exportSettings": Array [],
        "flowStartingPoints": Array [],
        "id": "0:1",
        "name": "Page 1",
        "prototypeDevice": Object {
          "rotation": "NONE",
          "type": "NONE",
        },
        "prototypeStartNodeID": null,
        "scrollBehavior": "SCROLLS",
        "type": "CANVAS",
      },
    ],
    "id": "0:0",
    "name": "Document",
    "scrollBehavior": "SCROLLS",
    "type": "DOCUMENT",
  },
  "editorType": "figma",
  "lastModified": "2024-06-14T13:14:19Z",
  "linkAccess": "inherit",
  "name": "New File 1",
  "role": "owner",
  "schemaVersion": 0,
  "styles": Object {},
  "version": "0",
}
`;

exports[`Figma backend: empty page generates a document with a single empty PAGE 1`] = `
Object {
  "componentSets": Object {},
  "components": Object {},
  "document": Object {
    "children": Array [
      Object {
        "backgroundColor": Object {
          "a": 1,
          "b": 1,
          "g": 1,
          "r": 1,
        },
        "children": Array [],
        "exportSettings": Array [],
        "flowStartingPoints": Array [],
        "id": "0:1",
        "name": "Page 1",
        "prototypeDevice": Object {
          "rotation": "NONE",
          "type": "NONE",
        },
        "prototypeStartNodeID": null,
        "scrollBehavior": "SCROLLS",
        "type": "PAGE",
      },
    ],
    "id": "0:0",
    "name": "Document",
    "scrollBehavior": "SCROLLS",
    "type": "DOCUMENT",
  },
  "editorType": "figma",
  "lastModified": "2024-06-14T13:14:19Z",
  "linkAccess": "inherit",
  "name": "New File 1",
  "role": "owner",
  "schemaVersion": 0,
  "styles": Object {},
  "version": "0",
}
`;
